maybe fix height issue on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -42,8 +42,10 @@ canvas {
   box-sizing: border-box;
   width: 900px;
   max-width: 100%;
-  height: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  max-height: -moz-available;
+  max-height: -webkit-fill-available;
+  max-height: fill-available;
   max-height: 100%;
   padding: 50px 50px 50px 50px;
   display: -webkit-box;
@@ -60,8 +62,10 @@ canvas {
   box-sizing: border-box;
   width: 100vw;
   max-width: 100%;
-  height: 100%;
-  min-height: 100vh;
+  height: 100vh;
+  max-height: -moz-available;
+  max-height: -webkit-fill-available;
+  max-height: fill-available;
   max-height: 100%;
   display: -webkit-box;
   display: -moz-box;
